# ShieldChat

./: .gitignore  PROJECT_OVERVIEW.md  README.md  ShieldChat.md
presence-server/: package-lock.json  package.json  server.js
shield_chat/: Anchor.toml
shield_chat/.claude/: DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION.md  NEXT_STEPS.md  README.md  TESTING.md
shield_chat/programs/arcium_mxe/: Cargo.toml  Xargo.toml
shield_chat/programs/arcium_mxe/src/: error.rs  lib.rs  state.rs
shield_chat/programs/shield_chat/: Cargo.toml
shield_chat/programs/shield_chat/src/: lib.rs
shield_chat/programs/shieldchat_voting/: Cargo.toml
shield_chat/programs/shieldchat_voting/src/: error.rs  lib.rs  state.rs
shield_chat/tests/: shield_chat.ts
shieldchat-frontend/: next.config.ts  package-lock.json  package.json
shieldchat-frontend/src/app/: globals.css  layout.tsx  page.tsx
shieldchat-frontend/src/components/: ChannelList.tsx  CreateChannelModal.tsx  InviteModal.tsx  LeaveChannelModal.tsx  Navbar.tsx  OnlineStatus.tsx  PaymentModal.tsx  PrivyLoginButton.tsx  PrivyProviderWrapper.tsx  ReadReceipt.tsx  TypingIndicator.tsx  WalletAddress.tsx  WalletProvider.tsx
shieldchat-frontend/src/contexts/: NotificationContext.tsx  SolanaConnectionContext.tsx
shieldchat-frontend/src/hooks/: useGames.ts  useHelius.ts  useHeliusGames.ts  useInvites.ts  useMessages.ts  usePayments.ts  usePresence.ts  usePrivyAnchorWallet.ts  usePrivyLogin.ts  useShieldChat.ts  useVoting.ts
shieldchat-frontend/src/idl/: shield_chat.json
shieldchat-frontend/src/lib/: anchor.ts  arcium-mxe.ts  arcium.ts  constants.ts  helius.ts  inco.ts  ipfs.ts  magicblock.ts  (+3 more)
(+37 files in other folders)
