[package]
name = "arcium-mxe"
version = "0.1.0"
description = "Arcium MXE features for ShieldChat - Sealed-bid auctions, private tipping, and games"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcium_mxe"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
solana-program = "2.0"
