[package]
name = "shield-chat"
version = "0.1.0"
description = "Private messaging on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shield_chat"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
blake3 = "=1.8.2"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
