[package]
name = "shieldchat-voting"
version = "0.1.0"
description = "Anonymous voting for ShieldChat using Inco Lightning"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shieldchat_voting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
